app/assets/stylesheets/components/_custom_styles.scss
.vcd-capitalize-first-letter::first-letter {
  text-transform: uppercase;
}

// Display for js only
body:not(.js-enabled) .app-js-only {
  display: none;
}

// Display for no-js only
.js-enabled .app-no-js-only {
  display: none;
}

.app-no-wrap {
  white-space: nowrap;
}

.appeal_title_spacing {
  display: block;
  margin-bottom: 0.5rem;
}

.table-heading-blue {
  color: #1a65a6;
  vertical-align: bottom;
}


// Left-align "Next ->" when it is the only pagination link (no "<- Previous")
.govuk-pagination .govuk-pagination__next:only-child {
  margin-left: -15px;
}

// Hide copy buttons if Javascript is disabled
.copy-button { display: none }

body.js-enabled {
  .copy-button { display: inline-block }

  @media print {
    .copy-button { display: none }
  }
}

.disable-click {
  pointer-events: none;
  background-color: transparent;
  box-shadow: none;
}

@media (min-width: 40.0625em) {
  // The below CSS allows us to right-align
  // nav links such as 'Manage users'
  .govuk-service-navigation__wrapper {
    flex-grow: 1;
    justify-content: space-between;

    .pull-right {
     margin-left: auto;
    }
  }
}

